# psychic

./: Cargo.toml  PLAN-cross-query-feature.md  PLAN-unified-event-loop.md  README.md  SHELL_INTEGRATION.md  async-filtering-plan.md  how-it-works.md  justfile  llm.md  main.py  pyproject.toml  refactor.md  todo.md  train.py
.claude/commands/: context.md
notebooks/: weight-blending.ipynb
scripts/: analyze-perf.sh
shell/: psychic.zsh
src/: analytics.rs  analyze_perf.rs  app.rs  cli.rs  context.rs  db.rs  episode.rs  features.rs  history.rs  input.rs  main.rs  main.rs.backup  metadata_ext.rs  path_display.rs  preview.rs  ranker.rs  render.rs  search_worker.rs  ui_state.rs  walker.rs
src/feature_defs/: clicks_last_30_days.rs  filename_starts_with_query.rs  implementations.rs  is_under_cwd.rs  mod.rs  modified_today.rs  registry.rs  schema.rs
