[package]
name = "psychic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
serde_json = "1.0"
jiff = "0.1"
ansi-to-tui = "7"
timeago = "0.4"
csv = "1.3"
regex = "1"
