[package]
name = "psychic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psychic"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jiff = "0.1"
ansi-to-tui = "7"
timeago = "0.4"
csv = "1.3"
regex = "1"
clap = { version = "4.4", features = ["derive"] }
lightgbm3 = "1.0"
log = "0.4"
fern = "0.6"
once_cell = "1.19"
rayon = "1.10"
crossbeam = "0.8"
rustc-hash = "2.0"
strum = "0.26"
strum_macros = "0.26"
fuzzy-matcher = "0.3"
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
